--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
         <div class="row">
             <div class="col-md-8">
                 <div class="input-group mb-3">
-                    <input type="text" class="form-control input-keyword" placeholder="Search Movie...">
+                    <input type="text" class="form-control input-keyword" id="myInput" placeholder="Search Movie...">
                     <div class="input-group-append">
-                        <button class="btn btn-primary search-button" type="button">Search</button>
+                        <button class="btn btn-primary search-button" id="myBtn" type="button">Search</button>
                     </div>
                 </div>
             </div>
